# pyjson

./: README.org  setup.cfg
.github/workflows/: main.yml
pyjson/: __init__.py  const.py  lexer.py  parser.py
tests/: test__init__.py  test_lexer.py  test_parser.py
