[metadata]
name = pyjson
version = attr: pyjson.VERSION
description = My package description
long_description = file: README.md, CHANGELOG.md, LICENSE.md
keywords = json
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
packages = find: